2005-08-30 Duncan Coutts <duncan@coutts.uklinux.net>

	* cairo/Graphics/Rendering/Cairo.hs: fix bug with allocating surfaces.

2005-08-29 Duncan Coutts <duncan@coutts.uklinux.net>

	* cairo/Graphics/Rendering/Cairo/Types.chs: merge patches from Paolo;
	move the definition of the Render monad into the Types module.

	* cairo/Graphics/Rendering/Cairo.hs: merge patches from Paolo; add
	haddock documentation for many functions.

	* demo/cairo/Drawing.hs, demo/cairo/StarAndRing.hs,
	demo/cairo/Text.hs, demo/cairo/Makefile: add cairo demos.

	* glib/System/Glib/Properties.chs: make the enum and object property
	constructor functions take the enum/object GType as an argument. This
	should make these types of properties actually work.

	* gtk/Graphics/UI/Gtk/Abstract/Container.chs,
	gtk/Graphics/UI/Gtk/Display/Image.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/OptionMenu.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/Toolbar.chs.pp,
	gtk/Graphics/UI/Gtk/Misc/Arrow.chs,
	gtk/Graphics/UI/Gtk/Multiline/TextBuffer.chs.pp,
	gtk/Graphics/UI/Gtk/Multiline/TextTag.chs.pp,
	gtk/Graphics/UI/Gtk/Scrolling/ScrolledWindow.chs.pp,
	gtk/Graphics/UI/Gtk/Selectors/FileChooserButton.chs.pp,
	gtk/Graphics/UI/Gtk/Windows/Window.chs.pp: pass the appropriate
	enum/object GType as an extra argument to the property constructor.

	* Makefile.am: build the cairo Types module using -fglasgow-exts and
	exclude most other modules from the haddock docs.

	* gtk/Graphics/UI/Gtk/Cairo.chs.pp: merge patches from Paolo and
	myself to make the Gtk cairo backend use the high level api style.

	* demo/cairo/Drawing.hs: update the Gtk cairo demo to use the high
	level api.

	* cairo/Graphics/Rendering/Cairo.hs: merge more documantation changes
	by Paolo (and some small changes by myself).

	* glib/System/Glib/Attributes.hs: improve the documentation for the
	attributes api and rename the Prop type to something less confusing.

	* glib/System/Glib/GError.chs.pp: simple doc reformatting and use